--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "sass --watch docs/stylesheets/sass:docs/stylesheets"
+    "watch": "sass --watch docs/assets/stylesheets/sass:docs/assets/stylesheets"
   },
   "author": "",
   "license": "ISC",
